--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -66,56 +66,56 @@ EAAI-21 co-chairs
 <em>Michael Guerzhoy - Princeton University</em>  </p>
 <p><strong>[11:00 - 11:45]  Main Track</strong>  </p>
 <ul>
-<li>Applied Machine Learning for Games: A Graduate School Course<br>
+    <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-16.ZengY.pdf">Applied Machine Learning for Games: A Graduate School Course</a><br>
 <em>Yilei Zeng, Aayush Shah, Jameson Thai, Michael Zyda</em></li>
-<li>Designing a Hybrid AI Residency<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-42.SilvaFLD.pdf">Designing a Hybrid AI Residency</a><br>
 <em>Felipe Leno Da Silva, Silvio Stanzani, Jefferson Coelho, Jorge Mondadori, Muriel Mazzetto, Felipe Sanches Couto, Raphael Cobe</em></li>
 </ul>
 <p><strong>[11:45 - 12:45]  Main Track</strong>  </p>
 <ul>
-<li>AI-Infused Collaborative Inquiry in Upper Elementary School: A Game-Based Learning Approach<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-26.LeeS.pdf">AI-Infused Collaborative Inquiry in Upper Elementary School: A Game-Based Learning Approach</a><br>
 <em>Seung Lee, Bradford Mott, Anne Ottenbreit-Leftwich, Adam Scribner, Sandra Taylor, Kyungjin Park, Jonathan Rowe, Krista Glazewski, Cindy Hmelo-Silver, James Lester</em></li>
-<li>Introduction to Machine Learning with Robots and Playful Learning<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-51.OlariV.pdf">Introduction to Machine Learning with Robots and Playful Learning</a><br>
 <em>Viktoriya Olari, Kostadin Cvejoski, Øyvind Eide</em></li>
-<li>Learning Artificial Intelligence: Insights into How Youth Encounter and Build Understanding of AI Concepts<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-78.GreenwaldE.pdf">Learning Artificial Intelligence: Insights into How Youth Encounter and Build Understanding of AI Concepts</a><br>
 <em>Eric Greenwald, Maxyn Leitner, Ning Wang</em></li>
 </ul>
 <p><strong>[12:45 - 3:00]  Gin Rummy Undergraduate Research Challenge</strong></p>
 <ul>
-<li>Extracting Learned Discard and Knocking Strategies from a Gin Rummy Bot<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-18.GoldsteinB.pdf">Extracting Learned Discard and Knocking Strategies from a Gin Rummy Bot</a><br>
 <em>Benjamin Goldstein, Jean Astudillo Guerra, Emily Haigh, Bryan Cruz Ulloa, Jeremy Blum</em></li>
-<li>A Heuristic Evaluation Function for Hand Strength Estimation in Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-21.AhmedA.pdf">A Heuristic Evaluation Function for Hand Strength Estimation in Gin Rummy</a><br>
 <em>Aqib Ahmed, Joshua Leppo, Michal Lesniewski, Riken Patel, Jonathan Perez, Jeremy Blum</em></li>
-<li>Estimating Card Fitness for Discard in Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-25.GallucciJ.pdf">Estimating Card Fitness for Discard in Gin Rummy</a><br>
 <em>Jacob Gallucci, Sarah Kettell, Richard Bowser, Christian Overton</em></li>
-<li>A Deterministic Neural Network Approach to Playing Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-94.NguyenVD.pdf">A Deterministic Neural Network Approach to Playing Gin Rummy</a><br>
 <em>Viet Dung Nguyen, Dung Doan, Todd Neller</em></li>
-<li>A Data-Driven Approach for Gin Rummy Hand Evaluation<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-92.TruongS.pdf">A Data-Driven Approach for Gin Rummy Hand Evaluation</a><br>
 <em>Sang Truong, Todd Neller</em></li>
-<li>Opponent Hand Estimation in the Game of Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-96.MishraB.pdf">Opponent Hand Estimation in the Game of Gin Rummy</a><br>
 <em>Peter Francis, Hoang Anh Just, Todd Neller</em></li>
-<li>Knocking in the Game of Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-91.MaravichR.pdf">Knocking in the Game of Gin Rummy</a><br>
 <em>Ryzeson Maravich, Taylor Neller, Todd Neller</em></li>
 </ul>
 <p><strong>[3:00 - 3:45]  Main Track</strong>  </p>
 <ul>
-<li>Using Visualized NLP in Undergraduate Students' Learning about Natural Language<br>
+<li>Using Visualized NLP in Undergraduate Students' Learning about Natural Language</a><br>
 <em>Cecilia Ovesdotter Alm, Alex Hedges</em></li>
-<li>Deep Discourse Analysis for Generating Personalized Feedback in Intelligent Tutor Systems<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-68.GrenanderM.pdf">Deep Discourse Analysis for Generating Personalized Feedback in Intelligent Tutor Systems</a><br>
 <em>Matt Grenander, Robert Belfer, Ekaterina Kochmar, Iulian Serban, François St-Hilaire, Jackie Cheung</em> </li>
 </ul>
 <p><strong>[3:45 - 4:30]  Main Track</strong>  </p>
 <ul>
-<li>Educational Question Mining At Scale: Prediction, Analysis and Personalization<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-65.WangZ.pdf">Educational Question Mining At Scale: Prediction, Analysis and Personalization</a><br>
 <em>Zichao Wang, Sebastian Tschiatschek, Simon Woodhead, Jose Miguel Hernandez Lobato, Simon Peyton Jones, Richard Baraniuk, Cheng Zhang</em></li>
-<li>Student Knowledge Prediction for Teacher-Student Interaction<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-85.KimS.pdf">Student Knowledge Prediction for Teacher-Student Interaction</a><br>
 <em>Seonghun Kim, Woojin Kim, Yeonju Jang, Heeseok Jung, Seongyune Choi, Hyeoncheol Kim</em></li>
 </ul>
 <p><strong>[4:30 - 5:15]  Main Track</strong>  </p>
 <ul>
-<li>Why and What to Teach: AI Curriculum for Elementary School<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-84.KimS.pdf">Why and What to Teach: AI Curriculum for Elementary School</a><br>
 <em>Seonghun Kim, Yeonju Jang, Woojin Kim, Seongyune Choi, Heeseok Jung, Soohwan Kim, Hyeoncheol Kim</em></li>
-<li>Teacher Perspectives on How To Train Your Robot: A Middle School AI and Ethics Curriculum<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-43.WilliamsR.pdf">Teacher Perspectives on How To Train Your Robot: A Middle School AI and Ethics Curriculum</a><br>
 <em>Randi Williams, Stephen Kaputsos, Cynthia Breazeal</em></li>
 </ul>
 <h2 id="sunday-february-7-2021">Sunday, February 7, 2021</h2>
@@ -130,49 +130,49 @@ EAAI-21 co-chairs
 <p><em>Mehran Sahami is the James and Ellenor Chesebrough Professor in Engineering and Associate Chair for Education in the Computer Science department at Stanford University. He is also the Robert and Ruth Halperin University Fellow in Undergraduate Education. He served as co-chair of the ACM/IEEE-CS joint task force on Computer Science Curricula 2013, is Past Chair of the ACM Education Board, and was appointed by the Governor of California to the state's Computer Science Strategic Implementation Plan Advisory Panel.</em></p>
 <p><strong>[11:15 - 12:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
 <ul>
-<li>Web-based Platform for K-12 AI Education in China<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-47.WuC.pdf">Web-based Platform for K-12 AI Education in China</a><br>
 <em>Chao Wu, Yan Li, Junxiang Li, Qiongdan Zhang, Fei Wu</em></li>
-<li>PoseBlocks: A Toolkit for Creating (and Dancing) with AI<br>
+    <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-71.JordanB.pdf">PoseBlocks: A Toolkit for Creating (and Dancing) with AI</a><br>
 <em>Brian Jordan, Nisha Devasia, Jenna Hong, Randi Williams, Cynthia Breazeal</em></li>
-<li>Teaching Tech to Talk: K-12 Conversational Artificial Intelligence Literacy Curriculum and Development Tools<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-20.VanBrummelenJ.pdf">Teaching Tech to Talk: K-12 Conversational Artificial Intelligence Literacy Curriculum and Development Tools</a><br>
 <em>Jessica Van Brummelen, Tommy Heng, Viktoriya Tabunshchyk</em> </li>
 </ul>
 <p><strong>[12:15 - 1:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
 <ul>
-<li>GANs Unplugged<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-75.VirtueP.pdf">GANs Unplugged</a><br>
 <em>Patrick Virtue</em></li>
-<li>What are GANs?: Introducing Generative Adversarial Networks to Middle School Students<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-41.AliS.pdf">What are GANs?: Introducing Generative Adversarial Networks to Middle School Students</a><br>
 <em>Daniella DiPaola, Safinah Ali, Cynthia Breazeal</em></li>
-<li>The Contour to Classification game<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-53.LeeI.pdf">The Contour to Classification game</a><br>
 <em>Irene Lee, Safinah Ali</em> </li>
 </ul>
 <p><strong>[1:15 - 3:00]  Gin Rummy Undergraduate Research Challenge</strong>  </p>
 <ul>
-<li>Heisenbot: A Rule-Based Game Agent for Gin Rummy <br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-66.EicholtzM.pdf">Heisenbot: A Rule-Based Game Agent for Gin Rummy</a> <br>
 <em>Matthew Eicholtz, Savanna Moss, Matt Traino, Christian Roberson</em></li>
-<li>A Highly-Parameterized Ensemble to Play Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-37.NagaiM.pdf">A Highly-Parameterized Ensemble to Play Gin Rummy</a><br>
 <em>Masayuki Nagai, Kavya Shrivastava, Kien Ta, Steven Bogaerts, Chad Byers</em> </li>
-<li>Random Forests for Opponent Hand Estimation in Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-6.HeinA.pdf">Random Forests for Opponent Hand Estimation in Gin Rummy</a><br>
 <em>Anthony Hein, May Jiang, Vydhourie Thiyageswaran, Michael Guerzhoy</em></li>
-<li>Evaluating Gin Rummy Hands Using Opponent Modeling and Myopic Meld Distance<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-28.GoldmanP.pdf">Evaluating Gin Rummy Hands Using Opponent Modeling and Myopic Meld Distance</a><br>
 <em>Phoebe Goldman, Corey Knutson, Ryan Mahtab, Jack Maloney, Joseph Mueller, Richard Freedman</em></li>
-<li>Opponent Hand Estimation in Gin Rummy Using Deep Neural Networks and Heuristic Strategies<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-89.FrancisP.pdf">Opponent Hand Estimation in Gin Rummy Using Deep Neural Networks and Heuristic Strategies</a><br>
 <em>Bhaskar Mishra, Ashish Aggarwal</em></li>
-<li>Modeling Expert and Folk Knowledge in a Heuristic-Based Reflex Agent for Gin Rummy<br>
+<li><a href="https://www.aaai.org/AAAI21Papers/EAAI-67.LarkinS.pdf">Modeling Expert and Folk Knowledge in a Heuristic-Based Reflex Agent for Gin Rummy</a><br>
 <em>Sarah Larkin, William Collicott, Jason Hiebel</em> </li>
 </ul>
 <p><strong>[3:00 - 3:45]  Model AI Assignments</strong>  </p>
 <ul>
-<li>“Unplugged” Semantic Networks and Knowledge Representations<br>
+<li>“Unplugged” Semantic Networks and Knowledge Representations</a><br>
 <em>Duri Long, Jonathan Moon, Brian Magerko</em></li>
 <li>Introducing AI Worksheet Activity<br>
 <em>Duri Long, Jonathan Moon, Brian Magerko</em></li>
 </ul>
 <p><strong>[3:45 - 4:30]  Model AI Assignments</strong></p>
 <ul>
-<li>Rushhour: designing and comparing heuristics for a children's puzzle<br>
+<li>Rushhour: designing and comparing heuristics for a children's puzzle<</a>br>
 <em>John Maraist</em> </li>
-<li>Using Markov Chain Text Generators to Facilitate Found Poetry Creation<br>
+<li>Using Markov Chain Text Generators to Facilitate Found Poetry Creation</a><br>
 <em>Alex Leto, Toni Lefton, Tom Williams</em> </li>
 </ul>
 <p><strong>[4:30 - 5:15]  Model AI Assignments</strong>  </p>
