--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -24,7 +24,7 @@
     <label for="time-zone-selector">Timezone:</label>
     <select id="time-zone-selector" class="selectpicker" data-live-search="true">
       <option value="local" selected>Local</option>
-      <option value="UTC">UTC</option>
+      <option value="PST8PDT">PST</option>
     </select>
     <label for="event-type-selector">&nbsp;Event type:</label>
     <select id="event-type-selector" class="selectpicker" multiple>
