update workshop time

--- a/templates/components.html
+++ b/templates/components.html
@@ -237,7 +237,7 @@
 
 
           {% for session in workshop.blocks %}
-              {% if workshop.id == "WS-9" or workshop.id == "WS-11" or workshop.id == "WS-12" or workshop.id == "WS-13" or workshop.id == "WS-17" or workshop.id == "WS-19" or workshop.id == "WS-20" %}
+              {% if workshop.id == "WS-19" %}
                   <div class="m-3 text-center">Live Session (to be decided)</div>
               {% else %}
                   <div class="m-3 text-center">
