add "ai in practice"

--- a/templates/base.html
+++ b/templates/base.html
@@ -198,6 +198,9 @@
                     <a class="dropdown-item" href="demonstrations.html">
                       Demonstrations
                     </a>
+                     <a class="dropdown-item" href="ai_in_practice.html">
+                      AI in Practice Panels
+                    </a>
                   </div>
                 </li>
               {% elif id == "Community" %}
