--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
             <li>7:30 - 8:45 AM PST</li>
             <li>3:30 - 4:45 PM PST</li>
             <li>11:30 - 00:45 AM PST</li>
-            The AAAI Organizational Awards will be held February 4, 2:00 - 3:00 PM PST. <a class="text" href="ai_in_practice.html">AI in Practice</a> panels will be held each day February 4-6, 10:30 - 11:30 AM PST.
+            The <a class="text" href="awards.html">AAAI Organizational Awards</a> will be held February 4, 2:00 - 3:00 PM PST. <a class="text" href="ai_in_practice.html">AI in Practice</a> panels will be held each day February 4-6, 10:30 - 11:30 AM PST.
 
         </dd>
 
