update logos exhibotors sponsors

--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block heading %}
-{{ components.section("Sponsor Lounge") }}
+{{ components.section("AAAI-21 Sponsor and Exhibit Program") }}
 {% endblock %}
 
 {% block content %}
@@ -11,9 +11,12 @@
 <div class="row">
   <div class="col-12 pb-4">
     <p class="lead">
-      AAAI 2021 is grateful to all its sponsors, who are listed below. We simply
-      couldn't run the conference without the help of these generous companies. We
-      thank them sincerely for their ongoing support of the AI community.
+        AAAI welcomes you to its annual Sponsor and Exhibit program. We would like to thank all of our sponsors for their generous support of AAAI programs and students. The exhibit program will be available during the following hours:<br>
+        February 4-6<br>
+        ------------<br>
+        10:00 AM - 12:30 PM PST<br>
+        6:00 PM - 8:30 PM PST<br>
+        2:00 AM - 4:30 AM PST
       <br >
       <span class="font-weight-bold">Click on sponsor logos to visit their Virtual Exhibit Spaces!</span>
     </p>
