add description to awards.html and diversity_programs.html

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -9,7 +9,22 @@
 
 <div class="row">
   <div class="col-md-12 col-sm-12 pr-5 lead">
+    <p>Welcome to the AAAI Awards Ceremony!</p>
+
+    <p>AAAI organizational awards are presented each year at the AAAI Conference on Artificial Intelligence. They comprise a host of lifetime honors and individual awards for significant achievements by AAAI members. Several committees review nominations for the various categories of awards, including the AAAI Fellows Committee, the AAAI Awards Committee, the IAAI/AI Magazine Engelmore Awards Committee, the AAAI/EAAI Outstanding Educator Award Committee, and a joint committee for the AAAI/ACM-SIGAI Dissertation Award.</p>
+    
+  <p>(AAAI annual conference awards for outstanding papers and program committee members are overseen by a subcommittee of the 2021 program committee, and are recapped here <URL LINK>.)</p>
+    
+    <p>We are delighted to honor the following individuals for their achievements and contributions to the AI community.</p>
+    
+  <p>Bart Selman<br>
+    President, AAAI</p>
+    
+    <p>Yolanda Gil<br>
+    Chair, Fellows and Awards Committees</p>
+    
     <h2 style="margin-bottom:20px"> Awards </h2>
+    
     {% for award in awards %}
     <!-- <a href="#"class="card-title" >
       {{award.name}}
