--- a/templates/diversity_programs.html
+++ b/templates/diversity_programs.html
@@ -7,14 +7,18 @@
 {% endblock %}
 
 {% block content %}
-<!-- 
+
 <div class="row">
-  <div class="col-md-7 col-sm-12 pr-5 lead">
-    <p>Welcome to Diversity Programs!<br><br>
-      Here is nothing left.
+  <div class="col-md-12 col-sm-12 pr-5 lead">
+    <p>Welcome to the AAAI-21 Diversity and Inclusion Program!</p>
+
+<p>Participation in AI by groups that are underrepresented in computer science is a fraction of what is needed to have an AI workforce that reflects the diversity in society. Diversity has many facets, including race, ethnicity, gender, age, religion, disability, sexual orientation, socioeconomic status, and cultural background. AAAI-21 will include several programs specifically designed to address this challenging issue.</p>
+
+<p>Maria Gini and Richard Souvenir <br>
+Diversity and Inclusion Cochairs</p>
     </p>
   </div>
-</div> -->
+</div>
 
 <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
 <div id="day">
