--- a/static/css/main.css
+++ b/static/css/main.css
@@ -500,7 +500,7 @@ body .carousel-control-prev {
   border-color: #82b74b;
 }
 
-.fc-v-event.calendar-event-plenary-invitedtalks {
+.fc-v-event.calendar-event-eaai {
   background-color: #26ffbc;
   border-color: #26ffbc;
 }
