diversity program tabs

--- a/templates/components.html
+++ b/templates/components.html
@@ -313,6 +313,99 @@
 
 {%- endmacro %}
 
+{% macro diversitygroup(diversity_programs) -%}
+<div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
+  <div id="day">
+  <div class="speakers">
+  <div class="cards row">
+    {% for social in diversity_programs %}
+    <div class="col-md-6 col-sm-12 p-3"
+         id='{{social.name|replace(" ", "_")|replace("?", "")}}'>
+      <div class="card p-3 text-center shadow p-3 mb-5 bg-light rounded"
+           style="box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); height:100%;">
+  
+        <h2 class="card-title" >
+          {{social.name}}
+        </h2>
+  
+        <h6 class="text-muted font-italic">
+          {{social.organizers.members|join(" & ")}}
+          {% if social.organizers.website %}
+            <br>
+            (<a href="{{social.organizers.website}}" target="_blank">{{social.organizers.website}}</a>)
+          {% endif %}
+        </h6>
+  
+        {% if social.image %}
+          <div class="m-4">
+          <img height="100"
+               src="{{social.image}}" alt="Logo of {{ social.name }}"/>
+          </div>
+        {% endif %}
+  
+        <div class="mx-4 text-left card-subtitle">
+          <p>{{social.description|safe}}</p>
+  
+          <p class="text-center">This event {{ social.location }}.</p>
+  
+          {% for session in social.sessions %}
+            <div class="m-3 text-muted text-center">
+            {{session.session}}
+            <span class="session_times">{{session.time_string}}</span>
+            {% if session.link %}
+              <div>
+              <a href="{{session.link}}" target="_blank"  class="card-link">
+                <!--
+                <img
+                    src="static/images/zoom-icon.png"
+                    height="24px"
+                    alt="Join Zoom Meeting"
+                    title="Join Zoom Meeting"
+                >
+                -->
+                [Join Meeting]
+              </a>
+              </div>
+            {% endif %}
+              <div class="text-center text-muted text-monospace">
+                <div class="paper-cal-links">
+                  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
+                  <span id="session-cal-link-{{ social.id }}-{{loop.index}}"></span>
+                </div>
+              </div>
+  
+            </div>
+          {% endfor %}
+  
+        </div>
+  
+        {% if social.rocketchat_channel %}
+        <p class="text-center text-muted card-title">
+          <a href="https://{{config.chat_server}}/channel/{{social.rocketchat_channel}}" target="_blank"> Chat </a>
+          {% if social.website %}
+            | <a href="{{social.website}}" target="_blank"> Website </a>
+          {% endif %}
+          {% if social.zoom_link %}
+            | <a href="{{social.zoom_link}}" target="_blank"> Zoom </a>
+          {% endif %}
+          {% if "Gather" in social.location %}
+            | <a href="{{config.gather_town}}" target="_blank"> Gather.Town </a>
+          {% endif %}
+        </p>
+        {% endif %}
+  
+  
+  
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+  </div>
+  </div>
+  </div>
+{%- endmacro %}
+
+
 {% macro tutorialgroup(tutorials,tutorials_MQ,tutorials_MH,tutorials_AQ,tutorials_AH) -%}
 <div class="accordion" id="accordionExample">
     <div class="text-center p-3">
