update invited speaker & panels

--- a/templates/base.html
+++ b/templates/base.html
@@ -201,6 +201,12 @@
                      <a class="dropdown-item" href="ai_in_practice.html">
                       AI in Practice Panels
                     </a>
+                    <a class="dropdown-item" href="invited_speaker_program.html">
+                      Invited Speaker Program
+                    </a>
+                    <a class="dropdown-item" href="invited_panels_program.html">
+                      Invited Panels Program
+                    </a>
                   </div>
                 </li>
               {% elif id == "Community" %}
