--- a/templates/components.html
+++ b/templates/components.html
@@ -35,6 +35,7 @@
 
 {% macro plenarysessiongroup(plenary_sessions) -%}
 {% for plenary_session in plenary_sessions %}
+    {% if 'wooldridge' not in plenary_session.id and 'panel' not in plenary_session.id %}
 <div class="row p-4">
   <div class="col-md-12">
     <div class="card p-3 shadow bg-light rounded">
@@ -82,6 +83,183 @@
             {% endif %}
           </div>
         </div>
+    </div>
+  </div>
+</div>
+    {% endif %}
+    {% if 'panel' in plenary_session.id %}
+        <div class="row p-4">
+  <div class="col-md-12">
+    <div class="card p-3 shadow bg-light rounded">
+        <div class="row">
+{#          <div class="col-md-2 col-sm-5">#}
+{#             {% for image in plenary_session.image %}#}
+{#            <img src="{{plenary_session.image}}" width="20%" class="mt-3" />#}
+{#             {% endfor %}#}
+{#          </div>#}
+{#          <div class="col-md-10 col-sm-6">#}
+            <div class="m-3 text-muted">
+              <h4>
+                <a href="plenary_session_{{plenary_session.id}}.html" class="main-title" >
+                  {{plenary_session.title}}
+                </a>
+              </h4>
+{#            </div>#}
+
+            {% if plenary_session.presenter != none %}
+{#            <div class="m-3 text-muted">#}
+              <span class="card-title h3">
+                {{plenary_session.presenter}}
+                {% if plenary_session.institution != none %}
+                / {{plenary_session.institution}}
+                {% endif %}
+              </span>
+{#            </div>#}
+                <br>
+            {% endif %}
+              {% for image in plenary_session.image %}
+{#                  {{image}}#}
+                <img style="width: 200px; height: 200px; margin:10px"  src="{{image}}" class="mt-3" />
+             {% endfor %}
+            <br>
+            {% for session in plenary_session.sessions %}
+{#            <div class="m-3 text-muted">#}
+              {{session.session}}
+              <span class="session_times">{{session.time_string}}</span>
+{#              {% if plenary_session.presentation_id or session.presentation_id %}#}
+{#                [<a href="plenary_session_{{plenary_session.id}}.html"   class="card-link">Watch video</a>]#}
+{#              {% else %}#}
+{#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
+{#              {% endif %}#}
+                [<a href="livestream.html"   class="card-link">Watch video</a>]
+            </div>
+            {% endfor %}
+
+            {% if plenary_session.abstract != none %}
+            <div class="m-3">
+              {{plenary_session.abstract|markdown}}
+            </div>
+            {% endif %}
+          </div>
+{#        </div>#}
+    </div>
+  </div>
+</div>
+    {% endif %}
+{% endfor %}
+{%- endmacro %}
+
+{% macro speakersessiongroup(plenary_sessions) -%}
+{% for plenary_session in plenary_sessions %}
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card p-3 shadow bg-light rounded">
+        <div class="row">
+          <div class="col-md-2 col-sm-5">
+            <img src="{{plenary_session.image}}" width="100%" class="mt-3" />
+          </div>
+          <div class="col-md-10 col-sm-6">
+            <div class="m-3 text-muted">
+              <h4>
+                <a href="plenary_session_{{plenary_session.id}}.html" class="main-title" >
+                  {{plenary_session.title}}
+                </a>
+              </h4>
+            </div>
+
+            {% if plenary_session.presenter != none %}
+            <div class="m-3 text-muted">
+              <span class="card-title h3">
+                {{plenary_session.presenter}}
+                {% if plenary_session.institution != none %}
+                / {{plenary_session.institution}}
+                {% endif %}
+              </span>
+            </div>
+            {% endif %}
+
+            {% for session in plenary_session.sessions %}
+            <div class="m-3 text-muted">
+              {{session.session}}
+              <span class="session_times">{{session.time_string}}</span>
+{#              {% if plenary_session.presentation_id or session.presentation_id %}#}
+{#                [<a href="plenary_session_{{plenary_session.id}}.html"   class="card-link">Watch video</a>]#}
+{#              {% else %}#}
+{#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
+{#              {% endif %}#}
+                [<a href="livestream.html"   class="card-link">Watch video</a>]
+            </div>
+            {% endfor %}
+
+            {% if plenary_session.abstract != none %}
+            <div class="m-3">
+              {{plenary_session.abstract|markdown}}
+            </div>
+            {% endif %}
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
+{%- endmacro %}
+
+{% macro panelsessiongroup(plenary_sessions) -%}
+{% for plenary_session in plenary_sessions %}
+<div class="row p-4">
+  <div class="col-md-12">
+    <div class="card p-3 shadow bg-light rounded">
+        <div class="row">
+{#          <div class="col-md-2 col-sm-5">#}
+{#             {% for image in plenary_session.image %}#}
+{#            <img src="{{plenary_session.image}}" width="20%" class="mt-3" />#}
+{#             {% endfor %}#}
+{#          </div>#}
+{#          <div class="col-md-10 col-sm-6">#}
+            <div class="m-3 text-muted">
+              <h4>
+                <a href="plenary_session_{{plenary_session.id}}.html" class="main-title" >
+                  {{plenary_session.title}}
+                </a>
+              </h4>
+{#            </div>#}
+
+            {% if plenary_session.presenter != none %}
+{#            <div class="m-3 text-muted">#}
+              <span class="card-title h3">
+                {{plenary_session.presenter}}
+                {% if plenary_session.institution != none %}
+                / {{plenary_session.institution}}
+                {% endif %}
+              </span>
+{#            </div>#}
+                <br>
+            {% endif %}
+              {% for image in plenary_session.image %}
+{#                  {{image}}#}
+                <img style="width: 200px; height: 200px; margin:10px"  src="{{image}}" class="mt-3" />
+             {% endfor %}
+            <br>
+            {% for session in plenary_session.sessions %}
+{#            <div class="m-3 text-muted">#}
+              {{session.session}}
+              <span class="session_times">{{session.time_string}}</span>
+{#              {% if plenary_session.presentation_id or session.presentation_id %}#}
+{#                [<a href="plenary_session_{{plenary_session.id}}.html"   class="card-link">Watch video</a>]#}
+{#              {% else %}#}
+{#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
+{#              {% endif %}#}
+                [<a href="livestream.html"   class="card-link">Watch video</a>]
+            </div>
+            {% endfor %}
+
+            {% if plenary_session.abstract != none %}
+            <div class="m-3">
+              {{plenary_session.abstract|markdown}}
+            </div>
+            {% endif %}
+          </div>
+{#        </div>#}
     </div>
   </div>
 </div>
