--- a/templates/ai_in_practice.html
+++ b/templates/ai_in_practice.html
@@ -18,6 +18,9 @@
         February 4-6, 2021
         </h6>
 
+        <p>Welcome to AI in Practice!</p>
+        <p>The 2021 edition of AI in Practice will focus on emerging applications of AI in real-time automation and finance, as well as on the challenges brought by the pandemic disruptions. We are bringing a group of technical experts and industry leaders for daily panel discussions with audience participation.</p>
+        <p>IAAI-21 is please to present the following panels for AI in Practice program:</p>
         <p>IAAI-21 is please to present the following panels for the 2021 edition of the AI in Practice program:</p>
         <p>AI in Practice Panel: Forecasting in Unprecedented Times<br />
         February 4, 10:30 - 11:30 AM PST</p>
@@ -27,6 +30,8 @@
 
         <p>AI in Practice Panel: AI Applications in Finance: Risks and Challenges in Deploying Real-World Businesses Solutions<br />
         February 6, 10:30 - 11:30 AM PST</p>
+        <p>Thiago Serra</p>
+        <p>AI in Practice Chair</p>
     </div>
 </div>
 
