--- a/templates/iaai.html
+++ b/templates/iaai.html
@@ -48,10 +48,10 @@ AI in Practice Chair</p>
 <br>
     <div class="col-12 pb-4" role="main">
 <h1 style="text-align: center" id="iaai-21-program-schedule">IAAI-21 Program Schedule</h1>
-<p style="text-align: center"><em>last updated: January 19, 2021</em></p>
-{#<h2 id="saturday-february-6-2021">Thursday, February 4, 2021</h2>#}
-<p>**am - **pm EST </p>
-<p><strong>[**-**am]  Robert S. Engelmore Memorial Award Lecture
+{#<p style="text-align: center"><em>last updated: January 19, 2021</em></p>#}
+<h2 id="saturday-february-6-2021">Thursday, February 4, 2021</h2>
+{#<p>**am - **pm EST </p>#}
+<p><strong>[Feb 4 7:30 - 8:45 AM PST]  Robert S. Engelmore Memorial Award Lecture
 </strong><br>
 <em>Tuomas Sandholm
  - Carnegie Mellon University, Optimized Markets, Inc., Strategy Robot, Inc., Strategic Machine, Inc.
@@ -66,7 +66,7 @@ AI in Practice Chair</p>
 <br>
     Among his honors are the Minsky Medal, Computers and Thought Award, inaugural ACM Autonomous Agents Research Award, CMU¡¯s Allen Newell Award for Research Excellence, Sloan Fellowship, NSF Career Award, Carnegie Science Center Award for Excellence, Edelman Laureateship, and Goldman Sachs 100 Most Intriguing Entrepreneurs. He is Fellow of the ACM, AAAI, and INFORMS. He holds an honorary doctorate from the University of Zurich.
 </em></p>
-<p><strong>[** - **]  IAAI-21/AAAI-21 Joint Invited Speaker: AI Infusion Investment Outlook
+<p><strong>[Feb 6 11:30 PM - 00:45 AM PST] IAAI-21/AAAI-21 Joint Invited Speaker: AI Infusion Investment Outlook
 </strong><br>
 <em>Dr. Kai-Fu Lee  - Sinoventures, China</em><br>
     <p>
@@ -77,10 +77,7 @@ With over 35 years of researching, developing, building and now investing in AI,
 Dr. Kai-Fu Lee is a former artificial intelligence researcher, former head of Google China and Microsoft Research Asia, and a long time investor in Chinese tech startups. Currently Chairman and CEO of Sinovation Ventures, he is one of the world¡¯s leading AI expert in particular the fields of commercialization and application of AI.
 </em></p>
 
-<p><strong>[10:30 - 11:30 AM PT each day, February 4-6] AI in Practice Panels</strong><br>
-    <p>
-Details are coming January 18.
-            </p>
+
 {#{{ iaai_poster_schedule_days }}#}
 {#    <br>#}
 {#    {{ iaai_poster_schedule }}#}
