add emb video in index.html

--- a/templates/cal_head.html
+++ b/templates/cal_head.html
@@ -101,7 +101,7 @@
         },
         // Render HTML from title as HTML
         eventContent: function( arg ) {
-            console.log(arg, "ppppp")
+            {#console.log(arg, "ppppp")#}
  	        return { html: arg.event.title }
         },
         datesSet: function( dateInfo ) {
