--- a/templates/workshop.html
+++ b/templates/workshop.html
@@ -68,15 +68,15 @@
   </div>
 </div>
 
-<div id="details" class="pp-card m-3 collapse hide">
-  <div class="card-body">
+<div id="details" class="pp-card m-3 collapse show">
+    <div class="card-body">
     <div class="card-text">
       <div id="abstractExample">
         {{workshop.abstract|safe}}
       </div>
     </div>
     <p></p>
-  </div>
+    </div>
 </div>
 
 <!-- Schedule -->
